Cambios visuales en botnoes

--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <div class="welcome-container">
-    <h1>Bienvenido al Sistema de Pacientes</h1>
+    <h1 align="center"> Bienvenido al Sistema de Pacientes</h1>
 </div>
 {% endblock %} 
