--- a/app/templates/pacientes/detalle_paciente.html
+++ b/app/templates/pacientes/detalle_paciente.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="table-container">
-    <h2>Detalle del Paciente</h2>
+    <h2 align = "center">Detalle del Paciente</h2>
     <div class="paciente-detalle">
         <p><strong>Nombre:</strong> {{ paciente['nombre'] }}</p>
         <p><strong>Apellido Paterno:</strong> {{ paciente['apellido_paterno'] }}</p>
