--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -27,7 +27,7 @@
             <ul class="sidebar__list">
                 <li class="sidebar__item">
                     <a href="{{ url_for('main.index') }}" class="sidebar__link">
-                        <i class="fas fa-th-large sidebar__icon"></i> Dashboard
+                        <i class="fas fa-th-large sidebar__icon"></i> Inicio
                     </a>
                 </li>
                 <li class="sidebar__item">
