--- a/app/templates/pacientes/lista_pacientes.html
+++ b/app/templates/pacientes/lista_pacientes.html
@@ -7,7 +7,7 @@
 
 <div class="table-container">
     <header class="valoracion-header">
-        <h2>Lista de Pacientes</h2>
+        <h2 align = "center">Lista de Pacientes</h2>
         <form action="{{ url_for('pacientes.lista_pacientes') }}" method="get" class="search-form">
             <input type="text" name="busqueda" placeholder="Buscar pacientes..." value="{{ busqueda }}">
             <button type="submit">Buscar</button>
