--- a/app/templates/pacientes/nuevo_paciente.html
+++ b/app/templates/pacientes/nuevo_paciente.html
@@ -4,45 +4,57 @@
 
 {% block content %}
 <div class="valoracion-container">
-    <h2>Registro de Nuevo Paciente</h2>
+    <h2 align="center"> Registro de Nuevo Paciente</h2>
     <div class="form-container">
         <form id="formPaciente" action="{{ url_for('pacientes.nuevo_paciente') }}" method="POST">
             <div class="form-group">
                 <label for="nombre" class="form-label">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" class="form-input" required 
-                       value="{{ request.form.nombre or '' }}">
+                        placeholder="Ingrese el nombre del paciente"
+                        value="{{ request.form.nombre or '' }}">
             </div>
             <div class="form-group">
                 <label for="apellido_paterno" class="form-label">Apellido Paterno:</label>
-                <input type="text" id="apellido_paterno" name="apellido_paterno" class="form-input" required>
+                <input type="text" id="apellido_paterno" name="apellido_paterno" class="form-input" required
+                        placeholder="Ingrese el apellido paterno"
+                        value="{{ request.form.apellido_paterno or '' }}">
             </div>
             <div class="form-group">
                 <label for="apellido_materno" class="form-label">Apellido Materno:</label>
-                <input type="text" id="apellido_materno" name="apellido_materno" class="form-input" required>
+                <input type="text" id="apellido_materno" name="apellido_materno" class="form-input" required
+                        placeholder="Ingrese el apellido materno"
+                        value="{{ request.form.apellido_materno or '' }}">
             </div>
             <div class="form-group">
                 <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento:</label>
-                <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" class="form-input" required>
+                <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" class="form-input" required
+                        placeholder="DD/MM/AAAA"
+                        value="{{ request.form.fecha_nacimiento or '' }}">
             </div>
             <div class="form-group">
                 <label for="telefono" class="form-label">Teléfono:</label>
                 <input type="tel" 
-                       id="telefono" 
-                       name="telefono" 
-                       class="form-input" 
-                       required 
-                       maxlength="10" 
-                       pattern="[0-9]{10}" 
-                       title="Por favor ingrese un número de teléfono válido de 10 dígitos">
+                        id="telefono" 
+                        name="telefono" 
+                        class="form-input" 
+                        required 
+                        maxlength="10" 
+                        pattern="[0-9]{10}" 
+                        title="Por favor ingrese un número de teléfono válido de 10 dígitos"
+                        placeholder="Ingrese 10 dígitos"
+                        value="{{ request.form.telefono or '' }}">
             </div>
             <div class="form-group">
                 <label for="correo" class="form-label">Correo:</label>
                 <input type="email" id="correo" name="correo" class="form-input" required
-                       value="{{ request.form.correo or '' }}">
+                        placeholder="ejemplo@correo.com"
+                        value="{{ request.form.correo or '' }}">
             </div>
             <div class="form-group">
                 <label for="ciudad" class="form-label">Ciudad:</label>
-                <input type="text" id="ciudad" name="ciudad" class="form-input" required>
+                <input type="text" id="ciudad" name="ciudad" class="form-input" required
+                        placeholder="Ingrese la ciudad"
+                        value="{{ request.form.ciudad or '' }}">
             </div>
             <button type="submit" class="form-button">Registrar Paciente</button>
         </form>
