--- a/app/templates/valoraciones/detalle_valoracion.html
+++ b/app/templates/valoraciones/detalle_valoracion.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="valoracion-container">
     <header class="valoracion-header">
-        <h2>Detalle de Valoración Antropométrica</h2>
+        <h2 align="center">Detalle de Valoración Antropométrica</h2>
         <h3>Paciente: {{ paciente['nombre'] }} {{ paciente['apellido_paterno'] }} {{ paciente['apellido_materno'] }}</h3>
     </header>
 
